--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@ langauge: ruby
 rbenv:
 - 2.5.3
 addons:
-  postgresql: 9.6
-  chrome: stable
+  postgresql: 12.2
+  # chrome: stable
 dist: xenial
 before_install:
   - yes | gem update --system --force
   - gem install bundler
 script:
-- yarn
+# - yarn
 - bundle exec rails db:{create,migrate} RAILS_ENV=test
 - bundle exec rspec
