--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ rbenv:
 - 2.5.3
 addons:
   postgresql: 12.2
-  # chrome: stable
+  chrome: stable
 dist: xenial
 before_install:
   - yes | gem update --system --force
   - gem install bundler
 script:
-# - yarn
+- yarn
 - bundle exec rails db:{create,migrate} RAILS_ENV=test
 - bundle exec rspec
